Fixed z-index of logo button

--- a/Stylesheets/style.css
+++ b/Stylesheets/style.css
@@ -1300,6 +1300,7 @@ td > img {
   -moz-user-select:none;
   -webkit-user-select:none;
   -webkit-touch-callout: none;
+  z-index: 10;
 }
 
 #motif-table a.logo-button:active {
